<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">FastHub</string>
    <string name="app_name_full" translatable="false">FastHub for Android</string>
    <string name="linear_layout_manager" translatable="false">com.fastaccess.ui.widgets.recyclerview.layout_manager.LinearManager</string>
    <string name="grid_layout_manager" translatable="false">com.fastaccess.ui.widgets.recyclerview.layout_manager.GridManager</string>
    <string name="staggered_layout_manager" translatable="false">com.fastaccess.ui.widgets.recyclerview.layout_manager.StaggeredManager</string>
    <string name="scroll_behavior" translatable="false">@string/appbar_scrolling_view_behavior</string>
    <string name="custom_tablet_provider" translatable="false">com.fastaccess.ui.widgets.TabletBehavior</string>
    <string name="gists" translatable="false">Gists</string>
    <string name="readme" translatable="false">Readme</string>
    <string name="commits" translatable="false">Commits</string>
    <string name="repos" translatable="false">Repositories</string>
    <string name="forked" translatable="false">Forked</string>
    <string name="starred" translatable="false">Starred</string>
    <string name="icon_transition" translatable="false">profile_image_transition</string>
    <string name="title_transition" translatable="false">profile_title_transition</string>
    <string name="code" translatable="false">Code</string>
    <string name="issues" translatable="false">Issues</string>
    <string name="pull_requests" translatable="false">Pull Requests</string>
    <string name="repo" translatable="false">Repository</string>
    <string name="download_as_zip" translatable="false">Source code (zip)</string>
    <string name="download_as_tar" translatable="false">Source code (tar.gz)</string>
    <string name="merged" translatable="false">Merged</string>
    <string name="star" translatable="false">Star</string>
    <string name="stars" translatable="false">Stars</string>
    <string name="fork" translatable="false">Fork</string>
    <string name="forks" translatable="false">Forks</string>
    <string name="issue" translatable="false">Issue</string>
    <string name="merge" translatable="false">Merge</string>
    <string name="pull_request" translatable="false">Pull Request</string>
    <string name="commit" translatable="false">Commit</string>
    <string name="markdown" translatable="false">Markdown</string>
    <string name="gist" translatable="false">Gist</string>
    <string name="back_slash" translatable="false">/</string>
    <string name="fork_repo_hint" translatable="false">Fork repo</string>
    <string name="bbn_fab_default_behavior" translatable="false">com.fastaccess.ui.widgets.FloatingActionButtonBehavior</string>
    <string name="created_gist" translatable="false">@string/gist</string>
    <string name="gollum" translatable="false">Wiki</string>
    <string name="created_issue" translatable="false">Issue</string>
    <string name="public_event" translatable="false">Open-sourced</string>
    <string name="organization_event" translatable="false">Organization</string>
    <string name="card_event" translatable="false">Card</string>
    <string name="project_event" translatable="false">Project</string>
    <string name="pr_review_event" translatable="false">Pull Request</string>
    <string name="repo_event" translatable="false">Repository</string>
    <string name="email_address" translatable="false">fastaccess.app@gmail.com</string>
    <string name="forking" formatted="true" translatable="false">Forking %s</string>
    <string name="starring" formatted="true" translatable="false">Starring %s</string>
    <string name="un_starring" formatted="true" translatable="false">Unstarring %s</string>
    <string name="un_watching" formatted="true" translatable="false">Unwatching %s</string>
    <string name="watching" formatted="true" translatable="false">Watching %s</string>
    <string name="light_theme_mode" translatable="false">Light Theme</string>
    <string name="dark_theme_mode" translatable="false">Dark Theme</string>
    <string name="amlod_theme_mode" translatable="false">Amlod Theme</string>
    <string name="mid_night_blue_theme_mode" translatable="false">Mid Night Blue</string>
    <string name="bluish_theme" translatable="false">Bluish Theme</string>
    <string name="red_theme_mode" translatable="false">Red</string>
    <string name="pink_theme_mode" translatable="false">Pink</string>
    <string name="purple_theme_mode" translatable="false">Purple</string>
    <string name="deep_purple_theme_mode" translatable="false">Deep Purple</string>
    <string name="indigo_theme_mode" translatable="false">Indigo</string>
    <string name="blue_theme_mode" translatable="false">Blue</string>
    <string name="light_blue_theme_mode" translatable="false">Light Blue</string>
    <string name="cyan_theme_mode" translatable="false">Cyan</string>
    <string name="teal_theme_mode" translatable="false">Teal</string>
    <string name="green_theme_mode" translatable="false">Green</string>
    <string name="light_green_theme_mode" translatable="false">Light Green</string>
    <string name="lime_theme_mode" translatable="false">Lime</string>
    <string name="yellow_theme_mode" translatable="false">Yellow</string>
    <string name="amber_theme_mode" translatable="false">Amber</string>
    <string name="orange_theme_mode" translatable="false">Orange</string>
    <string name="deep_orange_theme_mode" translatable="false">Deep Orange</string>
    <string name="logo_designer" formatted="true" translatable="false">Logo Designer (%s)</string>
    <string name="google_plus" translatable="false">Google+</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="posting_reaction" formatted="true" translatable="false">Posting reaction %s</string>
    <string name="daily" translatable="false">Daily</string>
    <string name="weekly" translatable="false">Weekly</string>
    <string name="monthly" translatable="false">Monthly</string>
    <string name="squash" translatable="false">Squash</string>
    <string name="rebase" translatable="false">Rebase</string>
    <string name="pull_request_reviews" translatable="false">Pull Request Reviews</string>
    <string name="review_changes" translatable="false">Review Changes</string>
    <string name="enterprise" translatable="false">Enterprise</string>
    <string name="endpoint_hint" translatable="false">example.com</string>
    <string name="no_branches" translatable="false">No Branches or Tags</string>
    <string name="pro_features" translatable="false">PRO Features</string>
    <string name="pro_features_list" translatable="false"><![CDATA[Get the PRO features of FastHub which includes:\n
        • All PRO Themes\n
        • PR Reviews & On-line code comments (PRs & Commits)\n
        • Commit from FastHub (Edit, Create & Delete files)\n
        • Supports 2 more Merging methods (Rebase & Squash)\n
        • Login to unlimited accounts\n
        • Edit & Add unlimited Gist Files\n
        • Project Columns & Cards (Edit, Create & Delete)\n
        • Pin Issues, PRs & Gists\n
        • New upcoming PRO features (Coming soon...)
    ]]></string>
    <string name="enterprise_pro_description" translatable="false"><![CDATA[
            • Login to unlimited number of Enterprise & GitHub accounts\n
            • Access GitHub contents along side your Enterprise Account
    ]]></string>
    <string name="purchase" translatable="false">Purchase</string>
    <string name="get_all" translatable="false">Purchase All (7.00USD)</string>
    <string name="fasthub_premium_features" translatable="false">FastHub Premium Features</string>
    <string name="feeds" translatable="false">Feeds</string>
    <string name="action">Action</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="close_issue">Close Issue</string>
    <string name="lock_issue">Lock conversation</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="back">Back</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="type_here">Type here</string>
    <string name="milestone">Milestone</string>
    <string name="open">Open</string>
    <string name="labels">Labels</string>
    <string name="logout">Logout</string>
    <string name="delete_repo">Delete Repo</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="assignees">Assignees</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="background_job_summary">Change how frequently FastHub checks for new notifications</string>
    <string name="background_job_title">Sync Interval</string>
    <string name="every">Every</string>
    <string name="recycler_view_animation_summary">Enable list animations</string>
    <string name="recycler_view_animation_title">List Animation</string>
    <string name="back_button_summary">Disable dialog preventing accidental app closure</string>
    <string name="back_button_title">Disable Exit Confirmation</string>
    <string name="rect_avatar_summary">Use rounded squarish avatars instead of circular ones</string>
    <string name="rect_avatar_title">Squarish Avatars</string>
    <string name="about">About</string>
    <string name="copy">Copy URL</string>
    <string name="mark_notification_title">Disable Notification Read Status</string>
    <string name="mark_notification_summary">Disable marking as read upon clicking a notification.</string>
    <string name="theme_title">Theme</string>
    <string name="theme_summary">Choose your default theme</string>
    <string name="theme_color_summary">Choose theme accent color</string>
    <string name="theme_color_title">Theme Accent Color</string>
    <string name="support_development">Support Development</string>
    <string name="pinned">Pinned</string>
    <string name="public_gists">Public Gists</string>
    <string name="enable_ads">Enable Ads</string>
    <string name="my_gists">My Gists</string>
    <string name="wrap_code_summary">Wrap code in code viewer by default</string>
    <string name="wrap_code_title">Wrap Code</string>
    <string name="enable_notification_sound_summary">Enable notification sound once a notification is received.</string>
    <string name="enable_notification_sound_title">Enable Notification Sound</string>
    <string name="enable_notification_title">Enable Notifications</string>
    <string name="reply">Reply</string>
    <string name="enable_signature">Enable Signature</string>
    <string name="enable_signature_summary">Enable sent via signature</string>
    <string name="enable_signature_box">Enable Signature Box</string>
    <string name="enable_signature_box_summary">Enable checkbox to toggle signature in text editor</string>
    <string name="banners">Introducing Banners</string>
    <string name="banners_info">With FastHub 2.5.0, you can now express yourself more with banners
        for your profile page.\n\nAnyone using the FastHub app can see your header, and you\'ll
        begin seeing other people's headers as well! If you\'d like to create a banner for yourself,
        make it 1280x384 or divisible, otherwise it may get cropped.\n\nYou can add or change your
        banner at any time by creating a gist described "header.fst" with a file containing a
        direct link to the header image.\n\nOr even simpler, just use the built-in image chooser!
    </string>
    <string name="edit_banner">CHOOSE BANNER</string>
    <string name="copy_sha">Copy SHA-1</string>
    <string name="view_as_code">View as code</string>
    <string name="block">Block</string>
</resources>