<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/editMenu"
        android:icon="@drawable/ic_edit"
        android:title="@string/action"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/edit"
                android:icon="@drawable/ic_edit"
                android:title="@string/edit"/>
            <item
                android:id="@+id/labels"
                android:icon="@drawable/ic_label"
                android:title="@string/labels"/>
            <item
                android:id="@+id/milestone"
                android:icon="@drawable/ic_milestone"
                android:title="@string/milestone"/>

            <item
                android:id="@+id/assignees"
                android:icon="@drawable/ic_profile"
                android:title="@string/assignees"/>
        </menu>
    </item>

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/lockIssue"
        android:title="@string/lock_issue"
        app:showAsAction="never"/>

    <item
        android:id="@+id/closeIssue"
        android:title="@string/close_issue"
        app:showAsAction="never"/>


</menu>