<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/navToRepo"
            android:icon="@drawable/ic_repo"
            android:title="@string/repo"
            android:visible="false"/>
        <item
            android:id="@+id/mainView"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
    </group>

    <group android:id="@+id/profile_group">

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>

    </group>

    <group
        android:id="@+id/fasthub_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/fhRepo"
            android:icon="@drawable/ic_github"
            android:title="@string/app_name"/>

        <item
            android:id="@+id/supportDev"
            android:icon="@drawable/ic_heart"
            android:title="@string/support_development"/>

    </group>

    <group
        android:id="@+id/group_one"
        android:checkableBehavior="none">
        <item
            android:id="@+id/pinnedMenu"
            android:icon="@drawable/ic_pin_filled"
            android:title="@string/pinned"/>
    </group>

    <group
        android:id="@+id/group_two"
        android:checkableBehavior="none">
        <item
            android:id="@+id/gists"
            android:icon="@drawable/ic_gists"
            android:title="@string/public_gists"/>
        <item
            android:id="@+id/myGists"
            android:icon="@drawable/ic_gists"
            android:title="@string/my_gists"/>
    </group>

    <group
        android:id="@+id/group_three"
        android:checkableBehavior="none">
        <item android:title="@string/action">
            <menu>
                <!--<item-->
                    <!--android:id="@+id/settings"-->
                    <!--android:icon="@drawable/ic_settings"-->
                    <!--android:title="@string/settings"/>-->

                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout"/>
            </menu>
        </item>
    </group>
</menu>