<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/navToRepo"
            android:icon="@drawable/ic_home"
            android:title="@string/repo"
            android:visible="false"/>
        <item
            android:id="@+id/mainView"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
    </group>

    <group
        android:id="@+id/fasthub_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/fhRepo"
            android:icon="@drawable/ic_github"
            android:title="@string/app_name"/>

        <item
            android:id="@+id/supportDev"
            android:icon="@drawable/ic_heart"
            android:title="@string/support_development"/>

    </group>

    <group
        android:id="@+id/group_one"
        android:checkableBehavior="none">
        <item
            android:id="@+id/pinnedMenu"
            android:icon="@drawable/ic_pin_filled"
            android:title="@string/pinned"/>
    </group>

    <group
        android:id="@+id/group_two"
        android:checkableBehavior="none">
        <item
            android:id="@+id/gists"
            android:icon="@drawable/ic_gists"
            android:title="@string/public_gists"/>
        <item
            android:id="@+id/myGists"
            android:icon="@drawable/ic_gists"
            android:title="@string/my_gists"/>
    </group>
</menu>