<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/viewAsCode"
        android:title="@string/view_as_code"
        app:showAsAction="never"/>

    <item
        android:id="@+id/download"
        android:title="@string/download"
        app:showAsAction="never"/>
    <item
        android:id="@+id/browser"
        android:title="@string/open_in_browser"
        app:showAsAction="never"/>

    <item
        android:id="@+id/copy"
        android:title="@string/copy"
        app:showAsAction="never"/>

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="never"/>

</menu>