<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="none">

        <item
            android:id="@+id/fhRepo"
            android:icon="@drawable/ic_github"
            android:title="@string/app_name"/>

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_issues"
            android:title="@string/about"/>


        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/supportDev"
            android:icon="@drawable/ic_heart"
            android:title="@string/support_development"/>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>

</menu>