<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/block"
        android:icon="@drawable/ic_lock"
        android:title="@string/block"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="always"/>

    <item
        android:id="@+id/browser"
        android:icon="@drawable/ic_brower"
        android:title="@string/open_in_browser"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/copyUrl"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/copySha"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy_sha"
        android:visible="false"
        app:showAsAction="never"/>


</menu>