<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/open"
        android:icon="@drawable/ic_eye"
        android:title="@string/open"
        app:showAsAction="never"/>

    <item
        android:id="@+id/download"
        android:icon="@drawable/ic_download"
        android:title="@string/download"
        app:showAsAction="never"/>

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy"
        app:showAsAction="never"/>

</menu>