<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_trash"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy"
        app:showAsAction="ifRoom"/>


</menu>