<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_trash"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/reply"
        android:icon="@drawable/ic_undo"
        android:title="@string/reply"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>
</menu>