<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/browser"
        android:icon="@drawable/ic_brower"
        android:title="@string/open_in_browser"
        app:showAsAction="never"/>
    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy"
        app:showAsAction="never"/>

    <item
        android:id="@+id/deleteRepo"
        android:title="@string/delete_repo"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/originalRepo"
        android:visible="false"
        app:showAsAction="never"/>
</menu>