<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:theme="?android:toolbarStyle"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/spacing_normal"
            android:paddingStart="@dimen/spacing_normal">

            <com.fastaccess.ui.widgets.ForegroundImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/back"
                android:padding="@dimen/spacing_normal"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_back"/>

            <com.fastaccess.ui.widgets.FontEditText
                android:id="@+id/searchEditText"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/type_here"
                android:imeActionLabel="@string/search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/spacing_xs_large"/>

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

</LinearLayout>