<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_light_white"
    android:orientation="vertical"
    android:theme="@style/InfoTheme"
    tools:context="com.fastaccess.ui.modules.profile.banner.BannerInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_height="192dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/spacing_xs_large">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/material_blue_accent_700"
                app:expandedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded.LightText"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@string/banners">

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"/>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/spacing_large"
            android:paddingStart="@dimen/spacing_large">

            <com.fastaccess.ui.widgets.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/banners_info"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/imageChooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/spacing_xs_large"
        android:text="@string/edit_banner"
        style="@style/Base.Widget.AppCompat.ButtonBar"/>

</RelativeLayout>
